--- a/sales-excel.Rmd
+++ b/sales-excel.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Sales"
-author: "Naomi Ekas"
+author: "Logun Gunderson"
 output: github_document
 ---
 
@@ -16,8 +16,11 @@ knitr::include_graphics("images/sales-1.png")
 ```
 
 ```{r}
+sales <- read_excel("data-raw/sales.xlsx", skip = 3, col_names = c("id", "n"))
 
 ```
+
+
 
 -   **Stretch goal:** Manipulate the sales data such such that it looks like the following.
 
@@ -26,5 +29,17 @@ knitr::include_graphics("images/sales-2.png")
 ```
 
 ```{r}
-
+sales%>%
+  mutate(is_brand_name = str_detect(id, "Brand"),
+         brand = if_else(is_brand_name, id, NULL)
+         )%>%
+  fill(brand)%>%
+  filter(!is_brand_name)%>%
+  select(brand, id, n)%>%
+  mutate(as.numeric(id), as.numeric(n))
 ```
+
+
+
+
+
